[workspace]
resolver = "2"
members = ["crates/holocron-cli", "crates/holocron-core"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.84"
authors = ["Amit Budhu"]
license = "MIT"
homepage = "https://onedev.amitbudhu.com/holocron"
repository = "https://onedev.amitbudhu.com/holocron"
description = "Audit a Rust codebase and produce a graded report card"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Hashing for fingerprints (#8)
sha2 = "0.10"
hex = "0.4"

# Cargo metadata for #4 (clippy JSON output)
cargo_metadata = "0.19"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Internal crates
holocron-core = { path = "crates/holocron-core" }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
