[package]
name = "holocron-auditors"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "External tool wrappers for the Holocron Rust auditor"
repository.workspace = true

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
multiple_crate_versions = "allow"

[dependencies]
holocron-core.workspace = true
async-trait.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
cargo_metadata.workspace = true
which = "8"
tempfile = "3"
walkdir = "2"

[dev-dependencies]
tempfile = "3"
