[package]
name = "holocron-auditors"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "External tool wrappers for the Holocron Rust auditor"
repository.workspace = true
publish = false  # workspace-internal; install via `cargo install --path crates/holocron-cli`

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
multiple_crate_versions = "allow"

[dependencies]
holocron-core.workspace = true
async-trait.workspace = true
anyhow.workspace = true
serde.workspace = true
# Used by clippy.rs (cargo NDJSON parsing) and rustsec.rs (audit JSON)
serde_json.workspace = true
tokio.workspace = true
# Used by rustsec.rs + machete.rs to locate external binaries on PATH
which = "8"
# Used by rust_code_analysis.rs to stage the per-file JSON output dir
tempfile = "3"
# Used by rust_code_analysis.rs to walk src/ trees and the JSON output dir
walkdir = "2"

[dev-dependencies]
tempfile = "3"
