[package]
name = "holocron-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Command-line interface for the Holocron Rust auditor"
repository.workspace = true
publish = false  # workspace-internal; install via `cargo install --path crates/holocron-cli`

[[bin]]
name = "holocron"
path = "src/main.rs"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
multiple_crate_versions = "allow"

[dependencies]
holocron-core.workspace = true
holocron-auditors.workspace = true
holocron-report.workspace = true
clap.workspace = true
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true

[dev-dependencies]
tempfile = "3"
toml = "0.8"
