[package]
name = "holocron-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Core types and orchestration for the Holocron Rust auditor"
repository.workspace = true

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
multiple_crate_versions = "allow"

[dependencies]
# Used: error types in Auditor trait + Runner + Grade math
anyhow.workspace = true
async-trait.workspace = true
# Used: Finding/Grade serialize for JSON sidecar, deserialize for tests
serde.workspace = true
# Used: stable Finding fingerprint hashing
sha2.workspace = true
hex.workspace = true
# Used: ReportHeader timestamps + grade serde
chrono.workspace = true
# Used: Runner spawns auditors via tokio::JoinSet
tokio.workspace = true
# Used: structured logs in runner.rs
tracing.workspace = true

[dev-dependencies]
tempfile = "3"
